navbar too big fix

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -3,13 +3,13 @@
     top: 0; /* Stick the navbar to the top of the page */
     width: 100%; /* Full width */
     background: none; /* Background color */
-    padding: 10px 0;
     padding-right: 6rem;/* Padding for the navbar */
     z-index: 1000; /* Ensure the navbar stays on top of other content */
     display: flex;
+    align-items: center;
     gap: 4rem;
     flex-direction: row-reverse;/* Center the items horizontally */
-
+    max-height: 100px;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -22,7 +22,7 @@
 /* Style the links inside the navbar */
 .navbar a {
     color: white; /* Text color */
-    padding: 14px 20px; /* Padding inside each link */
+  
     text-decoration: none; /* Remove underline */
     font-size: larger;
     text-align: center; /* Center the text */
